5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1758_1183.log
== TEST (2019-05-28 10:16:26) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

n = 0
c = 0

while (v<0):
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:20:21) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

n = 0
c = 0

while (v>0):
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:24:11) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

n = 0
c = 0

while (v<0):
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:27:41) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

n = 0
c = 0

while (size(v)<0):
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:28:25) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

n = 0
c = 0

while (size(v)<>0):
	n = n + 1.
print(n)
-- EXECUTION TIME:
0.25421
-- ERROR:
  File "/home/codebench/codes/1758/1183/main.py", line 8
    while (size(v)<>0):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:28:32) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

n = 0
c = 0

while (size(v)>0):
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:28:55) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

n = 0
c = 0

while (size(v)>0):
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:30:30) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

n = 0
c = 0

while (v[i]>=0):
	i = i + 1
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:30:46) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while (v[i]>=0):
	i = i + 1
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:17) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while ((v[i])>=0):
	i = i + 1
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:32) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while ((v[i])>=0):
	i = i + 1
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:03) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while ((v[i])>=0):
	i = i + 1
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:14) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while ((v[i])>=0):
	i = i + 1
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:59) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while ((v[i])>=0):
	i = i + 1
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:34:23) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while ((v[i])>=0):
	i = i + 1
	n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:36:02) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

n = 0
c = 0

while (size(v)>0):
	n = n + 1.
print(n)
-- EXECUTION TIME:
450.181
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:40:25) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while (v[i]<i-1):
	i = i + 1
	 if (v[i]<=0):
		n = n + 1.
print(n)
-- ERROR:
File "XXXX", line 11
    if (v[i]<=0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:40:28) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while (v[i]<i-1):
	i = i + 1
	  if (v[i]<=0):
		n = n + 1.
print(n)
-- ERROR:
File "XXXX", line 11
    if (v[i]<=0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:40:33) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while (v[i]<i-1):
	i = i + 1
	if (v[i]<=0):
		n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:01) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while (v[i]<i-1):
	i = i + 1
	if (v[i]>=0):
		n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:04) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while (v[i]<i-1):
	i = i + 1
	if (v[i]>=0):
		n = n + 1.
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:03:18) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0
c = 0

while (i<size(v)):
	if (v[i]>=0):
		n = n + 1
i = i + 1

tam_final = size(v)-n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:04) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i<size(v)):
	if (v[i]>=0):
		n = n + 1
i = i + 1

tam_final = size(v)-n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:21) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i<size(v)):
	if (v[i]>=0):
		n = n + 1
i = i + 1

tam_final = size(v)-n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1
print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:05:42) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i<size(v)):
	if (v[i]>=0):
		n = n + 1
i = i + 1

tam_final = size(v)-n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:06:01) 
-- CODE:
from numpy import*

v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i<size(v)):
	if (v[i]>=0):
		n = n + 1
i = i + 1

tam_final = size(v)-n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:07:48) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))
i = 0
n = 0
while (i<size(v)):
	if (v[i]>=0):
		n = n + 1
i = i + 1

tam_final = size(v)-n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:08:03) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))
i = 0
n = 0
while (i<size(v)):
	if (v[i]>=0):
		n = n + 1
i = i + 1

tam_final = size(v)-n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:10:45) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:10:56) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:11:18) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1
print(n)
tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:11:31) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1
print(n)
tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:31) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:41) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:50) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:13:25) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:14:04) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:14:19) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:39:58) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

print(n)
-- EXECUTION TIME:
1385.7
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:39:58) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- EXECUTION TIME:
1514.42
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:39:58) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
i = i + 1

print(vet_final)
-- EXECUTION TIME:
1554.16
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
digite os valores:
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:39:58) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
i = i + 1

print(vet_final)
-- EXECUTION TIME:
1555.67
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:

-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:43:42) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:44:07) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:44:38) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:45:23) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:52:00) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0
while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] - v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:39:47) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):

	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:40:40) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):

	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 1

while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- EXECUTION TIME:
0.550363
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[0 1 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:

-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:40:41) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):

	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 1

while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:51:42) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- EXECUTION TIME:
0.533485
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1 0 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:

-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:51:44) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:52:36) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 1

while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:53:06) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 3

while (i<size(v)):
	if (v[i]>=0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:53:45) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:54:00) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:54:40) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:54:40) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:54:52) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- EXECUTION TIME:
0.450837
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1 0 0 0 0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:

-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:54:54) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:55:37) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
		i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:56:15) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:56:24) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:56:46) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:57:00) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:57:43) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] >= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:03:50) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] <= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:04:05) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] <= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:04:23) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] <= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:04:45) 
-- CODE:
from numpy import*
v = array(eval(input("digite os valores: ")))

i = 0
n = 0

while (i < size(v)):
	if (v[i] <= 0):
		n = n + 1
	i = i + 1

tam_final = size(v) - n
vet_final = zeros(tam_final, dtype=int)

i = 0
j = 0

while (i < size(v)):
	if (v[i] >= 0):
		vet_final[j] = v[i]
		j = j + 1
	i = i + 1

print(vet_final)
-- EXECUTION TIME:
0.408398
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
